<resources>
    <string name="app_name">PoliApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="police">police</string>
    <string name="ambulance">ambulance</string>
    <string name="towing">towing</string>
    <string name="fire">fire</string>
    <string name="sign_in">sign in</string>
    <string name="request_fire_trucks">Request Fire Trucks</string>
    <string name="confirm_text">By clicking send you allow responders to get your current location check the pin to confirm</string>
    <string name="cancel">cancel</string>
    <string name="send">send</string>
    <string name="logo">logo</string>
</resources>
